--- a/server/public/views/routes/view.html
+++ b/server/public/views/routes/view.html
@@ -20,5 +20,17 @@
 
 
     </div>
+    <p>
+        hello!
+    </p>
+
+    <div ng-repeat="(key, value) in forceData.response">
+        <p>
+            {{ key}}
+            {{ value}}
+        </p>
+
+
+    </div>
 
 </p>
